# vesper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN-ISSUES.md  LICENSE  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.claude/agents/: plan-verifier.md  security-surface-reviewer.md
.github/workflows/: ci.yml
docs/: auto-updates.md  autostart.md  badge.md  cli.md  clipboard.md  code-signing.md  deeplink.md  dialogs.md  events.md  file-transfers.md  filesystem.md  frameless.md  getting-started.md  guards.md  ipc.md  menu.md  middleware.md  module-system.md  multiwindow.md  network.md  notifications.md  optional-features.md  os-theme.md  platform-requirements.md  plugins.md  power.md  process.md  project-config.md  security-lockdown.md  shell.md  single-instance.md  splash.md  tray.md  window-controls.md  window-state.md
docs/recipes/: auth.md  context-menus.md  custom-titlebar.md  drag-out.md  logging-middleware.md  media-capture.md  menubar-app.md  printing.md  real-time.md  state-between-windows.md  text-input.md  theming.md  user-preferences.md  video-playback.md  windows-installer.md
examples/: README.md
examples/hello/: README.md  app.py  vesper.toml
examples/hello/frontend/: index.html  vesper.js
examples/launcher/: README.md  app.py  vesper.toml
examples/launcher/frontend/: app.js  calc.js  game2048.js  index.html  (+2 more)
examples/media-vault/: README.md  app.py  vesper.toml
plugins/vesper-crash/: README.md  pyproject.toml
plugins/vesper-crash/tests/: conftest.py  test_crash.py
plugins/vesper-crash/vesper_crash/: __init__.py  plugin.py
plugins/vesper-crash/vesper_crash/sdk/: vesper-crash.js
plugins/vesper-db/: README.md  pyproject.toml
plugins/vesper-db/tests/: conftest.py  test_vesper_db.py
plugins/vesper-db/vesper_db/: __init__.py  base.py  plugin.py  session.py
plugins/vesper-db/vesper_db/sdk/: vesper-db.js
plugins/vesper-http/: README.md  pyproject.toml
plugins/vesper-http/tests/: test_vesper_http.py
plugins/vesper-http/vesper_http/: __init__.py  client.py  plugin.py
plugins/vesper-http/vesper_http/sdk/: vesper-http.js
plugins/vesper-keychain/: README.md  pyproject.toml
plugins/vesper-keychain/tests/: conftest.py  test_vesper_keychain.py
plugins/vesper-keychain/vesper_keychain/: __init__.py  keychain.py  plugin.py
plugins/vesper-keychain/vesper_keychain/sdk/: vesper-keychain.js
plugins/vesper-mongodb/: README.md  pyproject.toml
plugins/vesper-mongodb/tests/: conftest.py  test_vesper_mongodb.py
plugins/vesper-mongodb/vesper_mongodb/: __init__.py  database.py  plugin.py
plugins/vesper-mongodb/vesper_mongodb/sdk/: vesper-mongodb.js
plugins/vesper-notify/: README.md  pyproject.toml
plugins/vesper-notify/tests/: conftest.py  test_notify.py
plugins/vesper-notify/vesper_notify/: __init__.py  plugin.py
plugins/vesper-notify/vesper_notify/sdk/: vesper-notify.js
plugins/vesper-screenshot/: README.md  pyproject.toml
plugins/vesper-screenshot/tests/: conftest.py  test_screenshot.py
plugins/vesper-screenshot/vesper_screenshot/: __init__.py  plugin.py
plugins/vesper-screenshot/vesper_screenshot/sdk/: vesper-screenshot.js
plugins/vesper-serial/: README.md  pyproject.toml
plugins/vesper-serial/tests/: conftest.py  test_serial.py
plugins/vesper-serial/vesper_serial/: __init__.py  plugin.py
plugins/vesper-serial/vesper_serial/sdk/: vesper-serial.js
plugins/vesper-shortcuts/: README.md  pyproject.toml
plugins/vesper-shortcuts/tests/: conftest.py  test_shortcuts.py
plugins/vesper-shortcuts/vesper_shortcuts/: __init__.py  plugin.py
plugins/vesper-shortcuts/vesper_shortcuts/sdk/: vesper-shortcuts.js
plugins/vesper-store/: README.md  pyproject.toml
plugins/vesper-store/tests/: test_vesper_store.py
plugins/vesper-store/vesper_store/: __init__.py  plugin.py
plugins/vesper-store/vesper_store/sdk/: vesper-store.js
plugins/vesper-sysinfo/: README.md  pyproject.toml
plugins/vesper-sysinfo/tests/: test_sysinfo.py
plugins/vesper-sysinfo/vesper_sysinfo/: __init__.py  plugin.py
plugins/vesper-sysinfo/vesper_sysinfo/sdk/: vesper-sysinfo.js
plugins/vesper-theme/: README.md  pyproject.toml
plugins/vesper-theme/tests/: conftest.py  test_theme.py
plugins/vesper-theme/vesper_theme/: __init__.py  plugin.py
plugins/vesper-theme/vesper_theme/sdk/: vesper-theme.js
plugins/vesper-watch/: README.md  pyproject.toml
plugins/vesper-watch/tests/: test_watch.py
plugins/vesper-watch/vesper_watch/: __init__.py  plugin.py
plugins/vesper-watch/vesper_watch/sdk/: vesper-watch.js
scripts/: smoke_window.py
tests/: test_app_emit.py  test_app_quit.py  test_app_root_module.py  test_autostart.py  test_autostart_native.py  test_badge_clipboard_image.py  test_capabilities.py  test_capabilities_wiring.py  test_clipboard.py  test_clipboard_files.py  test_config.py  test_container_isolation.py  test_deeplink.py  test_dev_server_security.py  test_devtools.py  test_dialogs.py  test_doctor.py  test_emit_injection.py  test_frameless.py  test_fs.py  test_fs_scope.py  test_generate.py  test_guard_semantics.py  test_guards.py  test_import.py  test_init.py  test_installer.py  test_ipc.py  test_ipc_close.py  test_ipc_error_phases.py  test_lifecycle_hooks.py  test_menu.py  test_middleware.py  test_module.py  test_multiwindow.py  test_net.py  test_notify.py  test_os_info.py  test_plugin_system.py  test_positioner.py  (+23 more)
vesper/: __init__.py  cli.py
vesper/commands/: __init__.py  build.py  clean.py  dev.py  doctor.py  generate.py  info.py  init.py  installer.py  package.py  register_protocol.py  run.py  sign.py  sync_sdk.py  sync_types.py  utils.py  version.py
vesper/core/: app.py  autostart.py  badge.py  capabilities.py  clipboard.py  config.py  fs.py  fs_scope.py  guard.py  ipc.py  logging.py  menu.py  module.py  net.py  notify.py  os_info.py  paths.py  plugin.py  positioner.py  power.py  process.py  registry.py  shell.py  single_instance.py  static_server.py  tray.py  updater.py  window.py  window_effects.py  window_state.py
vesper/exceptions/: __init__.py  errors.py
vesper/sdk/: vesper.js
(+5 files in other folders)
