[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesper"
version = "0.1.0"
description = "A lightweight Python-first desktop framework inspired by Tauri"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DannelCu" }]
license = "MIT"

dependencies = [
  "pywebview>=4.0",
  "packaging>=21"
]

[project.optional-dependencies]
tray = ["pystray>=0.19", "Pillow>=9.0"]

[project.scripts]
vesper = "vesper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vesper*"]

[tool.setuptools.package-data]
vesper = ["sdk/*.js", "assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
