[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesper-notify"
version = "0.1.0"
description = "Rich notifications plugin for Vesper — click callbacks, action buttons, icons and sound via desktop-notifier"
requires-python = ">=3.10"
authors = [{ name = "DannelCu" }]
license = "MIT"

dependencies = [
  "vesper",
  "desktop-notifier>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vesper_notify*"]

[tool.setuptools.package-data]
vesper_notify = ["sdk/*.js"]
