[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesper-theme"
version = "0.1.0"
description = "OS dark/light mode detection plugin for Vesper — react to system theme changes from Python and JavaScript"
requires-python = ">=3.10"
authors = [{ name = "DannelCu" }]
license = "MIT"

dependencies = [
  "vesper",
  "darkdetect>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vesper_theme*"]

[tool.setuptools.package-data]
vesper_theme = ["sdk/*.js"]
